--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,12 @@
         <artifactId>maven-surefire-plugin</artifactId>  
         <version>2.4.2</version>   
   	</dependency>
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-devtools</artifactId>
+          <scope>runtime</scope>
+          <optional>true</optional>
+      </dependency>
   </dependencies>
 
 <build>
