20200224 更改表zc_control字段名zc_switch和类型bit 后台增加“添加学年接口”,前端js未调用

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -107,7 +107,7 @@
 	<!-- 500 服务器内部错误 -->
 	<error-page>
 		<error-code>500</error-code>
-		<location>/error500.html</location>
+		<location>/500.html</location>
 	</error-page>
 
   
