--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,10 +1,11 @@
 log4j.rootLogger=ERROR, stdout
 #log4j.rootLogger=info,console
 #log4j.logger.org.mybatis=DEBUG
-log4j.logger.csust.mapper=TRACE
+#log4j.logger.csust.mapper=TRACE
 log4j.logger.csust.mapper=DEBUG 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%5p %d %c: %m%n
-
+org.apache.catalina.core.ContainerBase.[Catalina].level = INFO
+org.apache.catalina.core.ContainerBase.[Catalina].handlers = java.util.logging.ConsoleHandler
 
