--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,7 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>4.0.0-b07</version>
         </dependency>
-        <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis</artifactId>
-            <version>3.3.0</version>
-        </dependency>
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -80,7 +76,7 @@
             <groupId>apache-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.1</version>
-            <type>pom.lastUpdated</type>
+            <!--<type>pom.lastUpdated</type>-->
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
@@ -100,20 +96,20 @@
         <dependency>
             <groupId>aopalliance</groupId>
             <artifactId>aopalliance</artifactId>
-            <version>1.0.0</version>
-            <type>pom.lastUpdated</type>
+            <version>1.0</version>
+            <!--<type>pom.lastUpdated</type>-->
         </dependency>
         <dependency>
-            <groupId>mysql-connector-java</groupId>
-            <artifactId>mysql</artifactId>
-            <version>5.1.29</version>
-            <type>pom.lastUpdated</type>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.11</version>
+            <!--<type>pom.lastUpdated</type>-->
         </dependency>
         <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
             <version>99.0-does-not-exist</version>
-            <type>pom.lastUpdated</type>
+            <!--<type>pom.lastUpdated</type>-->
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
