--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -2,4 +2,4 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf8&userSSL=false&serverTimezone=GMT
 jdbc.username=root
-jdbc.password=qq6168058
+jdbc.password=rxl13548908525
