--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,11 +1,13 @@
-log4j.rootLogger=ERROR, stdout
+log4j.rootLogger=ERROR, CONSOLE
 #log4j.rootLogger=info,console
 #log4j.logger.org.mybatis=DEBUG
 #log4j.logger.csust.mapper=TRACE
 log4j.logger.csust.mapper=DEBUG 
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%5p %d %c: %m%n
-org.apache.catalina.core.ContainerBase.[Catalina].level = INFO
-org.apache.catalina.core.ContainerBase.[Catalina].handlers = java.util.logging.ConsoleHandler
+log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
+log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+log4j.appender.CONSOLE.layout.ConversionPattern=%5p %d %c: %m%n
+#org.apache.catalina.core.ContainerBase.[Catalina].level = INFO
+org.apache.catalina.core.ContainerBase.[Catalina].[localhost].level = INFO
+#org.apache.catalina.core.ContainerBase.[Catalina].handlers = java.util.logging.ConsoleHandler
+org.apache.catalina.core.ContainerBase.[Catalina].[localhost].handlers = org.apache.juli.AsyncFileHandler,java.util.logging.ConsoleHandler
 
